variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: not found: value estSirBiscuit
while (2*x!= y+1) {avance(); if (estSirBiscuit()) {x=x+1} ; if (estSurOrange()) {y=y+1}} 
                                 ^